<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/menu_item_difficult"
        android:title="@string/menu_item_difficult"
        android:titleCondensed="@string/menu_item_condensed_difficult"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:checkable="true"/>
    <item android:id="@+id/menu_item_latin_names"
        android:title="@string/menu_item_latin_names"
        android:titleCondensed="@string/menu_item_condensed_latin_names"
        android:orderInCategory="100"
        android:checkable="true"
        app:showAsAction="never" />
    <item android:id="@+id/menu_item_about"
        android:title="@string/menu_item_about"
        android:titleCondensed="@string/menu_item_condensed_about"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
